--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: secret test
-      run: echo ${{secret.DOCKER_USERNAME}}
+      run: echo ${{secrets.DOCKER_USERNAME}}
     
     - name: Setup Node.js environment
       uses: actions/setup-node@v4.1.0
